team: Prevent tabs from wrapping on the default width.
Wrap all inputs tabs and inputs in `.contributors-list`, and increase
the width of that `div` to be 80px larger than the width of the other
content in order to fit each tab.

--- a/static/styles/portico.scss
+++ b/static/styles/portico.scss
@@ -970,6 +970,11 @@ a.bottom-signup-button {
     border-bottom-color: #fff;
 }
 
+.contributors-list {
+    margin-left: -40px;
+    width: calc(100% + 80px);
+}
+
 .contributors {
     display: none;
 }
@@ -1906,6 +1911,11 @@ input.new-organization-button {
 
     .line-break-desktop {
         display: none;
+    }
+
+    .contributors-list {
+        width: 100%;
+        margin-left: 0px;
     }
 }
 
